section failure added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>My first portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <!--header section-->
+        <div class="header-container">
+            <img class="header-img" src="images/banner/banner3.png" alt="">
+            <div class="header-title">
+                <h3 class="header-name">All Thinks Are Possible If You believe</h3>
+                <p class="header-disc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <button class="header-btn">Contact Us</button>
+            </div>
+        </div>
+    </header> 
+    <main>
+        <section>
+            <div class="failures">
+                <div class="failure-img">
+                    <img src="images/person.png" alt="failure">
+                </div>
+                <div class="faulures-container">
+                    <h3 class="failure-title">My failures of previous year</h3>
+                    <p class="failure-disc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <ul>
+                        <li>Contrary to popular belief, is not simply.</li><br>
+                        <li>Contrary to popular belief.</li><br>
+                        <li>Contrary to popular , is not simply.</li><br>
+                        <li>Contrary to popular belief, is not simply.</li><br>
+                        <li>Contrary to popular simply.</li><br>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
-</html>
+</html> 
