--- a/index.html
+++ b/index.html
@@ -37,6 +37,28 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="plans-container">
+                <h1 class="">My Plans</h1>
+                <div class="skill">
+                    <h1 class="primary-h1">Web Development</h1>
+                    <p class="primary-p">I want to start</p>
+                </div>
+                <div class="skill">
+                    <h1 class="primary-h1">Javascript</h1>
+                    <p class="primary-p">I want to learn</p>
+                </div>
+                <div class="skill">
+                    <h1 class="primary-h1">Smoking Habit</h1>
+                    <p class="primary-p">I want to end</p>
+                </div>
+                <div class="skill">
+                    <h1 class="primary-h1">ecommerce</h1>
+                    <p class="primary-p">I want to develop</p>
+                </div>
+
+            </div>
+        </section>
 
     </main>
     <footer>
