added mindset item

--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
     <header>
         <!--header section-->
         <div class="header-container">
-            <img class="header-img" src="images/banner/banner3.png" alt="">
             <div class="header-title">
                 <h3 class="header-name">All Thinks Are Possible If You believe</h3>
                 <p class="header-disc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-                <button class="header-btn">Contact Us</button>
+                <button class="primary-btn">Contact Us</button>
             </div>
         </div>
     </header> 
     <main>
         <section>
             <div class="failures">
-                <div class="failure-img">
-                    <img src="images/person.png" alt="failure">
-                </div>
+                <img class="failure-img" src="images/person.png" alt="">
+            
                 <div class="faulures-container">
                     <h3 class="failure-title">My failures of previous year</h3>
                     <p class="failure-disc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
@@ -38,25 +36,38 @@
             </div>
         </section>
         <section>
-            <div class="plans-container">
-                <h1 class="">My Plans</h1>
+            <h1 class="plan-hd">My Plans</h1>
+            <div class="plan-container">
                 <div class="skill">
-                    <h1 class="primary-h1">Web Development</h1>
-                    <p class="primary-p">I want to start</p>
+                    <img class="skill-img" src="images/icons/web.png" alt="web img">
+                    <h3 class="plan-title">Web Development</h3>
+                    <p class="plan-disc">I want to start</p>
                 </div>
                 <div class="skill">
-                    <h1 class="primary-h1">Javascript</h1>
-                    <p class="primary-p">I want to learn</p>
+                    <img class="skill-img" src="images/icons/js.png" alt="js img">
+                    <h3 class="plan-title">Javascript</h3>
+                    <p class="plan-disc">I want to learn</p>
                 </div>
                 <div class="skill">
-                    <h1 class="primary-h1">Smoking Habit</h1>
-                    <p class="primary-p">I want to end</p>
+                    <img class="skill-img" src="images/icons/smoke.png" alt="smoking img">
+                    <h3 class="plan-title">Smoking Habit</h3>
+                    <p class="plan-disc">I want to end</p>
                 </div>
                 <div class="skill">
-                    <h1 class="primary-h1">ecommerce</h1>
-                    <p class="primary-p">I want to develop</p>
+                    <img class="skill-img" src="images/icons/ecom.png" alt="ecommerce img">
+                    <h3 class="plan-title">ecommerce</h3>
+                    <p class="plan-disc">I want to develop</p>
                 </div>
+            </div>
 
+        </section>
+        <!-- Start mindset section -->
+        <section>
+            <div class="mindset-container">
+                <div class="mindset-item">
+                    <h1 class="mindset-title">Awlays keep a positive mindset</h1>
+                    <button class="primary-btn">Call Now</button>
+                </div>
             </div>
         </section>
 
