--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!--start nav bar-->
         <nav>
             <ul>
+                <li class="my-name">AHMED SHAKIL</li>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#failure">My Fauld</a></li>
                 <li><a href="#plane">My Plans</a></li>
